--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
+    "papaparse": "^5.5.2",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
+    "react-dropzone": "latest",
     "react-hook-form": "latest",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
@@ -57,10 +59,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "latest",
-    "react-dropzone": "latest",
     "xlsx": "latest",
-    "papaparse": "latest"
+    "zod": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
